--- a/index.less
+++ b/index.less
@@ -4,7 +4,7 @@
 // This is the main file that imports all the Less files from the `/styles` directory.
 
 // For more infos about creating themes, check out:
-// http://flight-manual.atom.io/hacking-atom/sections/creating-a-theme
+// https://pulsar-edit.dev/docs/launch-manual/sections/core-hacking/#creating-a-theme
 
 @import "styles/ui-variables";
 
