--- a/styles/base.less
+++ b/styles/base.less
@@ -3,7 +3,7 @@
 // -------------------
 
 // Used for global styles
-// Or to override certain Atom core styles
+// Or to override certain Pulsar core styles
 
 // -------------------
 
