--- a/styles/panels.less
+++ b/styles/panels.less
@@ -2,7 +2,7 @@
 // Panels
 // -------------------
 
-// Overrides: atom/static/panels.less
+// Overrides: pulsar/static/atom-ui/styles/panels.less
 
 .panel-heading {
   border-bottom: 1px solid @panel-heading-border-color;
