--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -4,7 +4,7 @@
 
 // Located at the bottom.
 // Displays information about the current editor.
-// Overrides: atom/status-bar
+// Overrides: pulsar-edit/status-bar
 
 .status-bar {
   font-size: @font-size;
