--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -3,7 +3,7 @@
 // -------------------
 
 // Displays selectable tabs above the editor.
-// Overrides: atom/tabs
+// Overrides: pulsar-edit/tabs
 
 .tab-bar {
   background-color: @tab-bar-background-color;
