--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -3,7 +3,7 @@
 // -------------------
 
 // Used to explore and open files in the current project.
-// Overrides: atom/tree-view
+// Overrides: pulsar-edit/tree-view
 
 
 .tree-view-resizer {
