--- a/styles/find-and-replace.less
+++ b/styles/find-and-replace.less
@@ -3,7 +3,7 @@
 // -------------------
 
 // Find and replace in the current buffer or across the entire project.
-// Overrides: atom/find-and-replace
+// Overrides: pulsar-edit/find-and-replace
 
 .find-and-replace {
   border-top: 1px solid @base-border-color;
