Update some ui-variables

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -12,7 +12,7 @@
 
 
 // Text Colors
-@text-color:           hsl(0,0%,66%);
+@text-color:           #ffffff;
 @text-color-subtle:    hsl(0,0%,50%);
 @text-color-highlight: hsl(0,0%,94%);
 @text-color-selected:  hsl(0,0%,100%);
@@ -33,7 +33,7 @@
 @app-background-color:       darken(@base-background-color, 5%);
 
 // Base colors
-@base-background-color: hsl(222,6%,22%);
+@base-background-color: #272822;
 @base-border-color:     darken(@base-background-color, 8%);
 
 // Component colors
@@ -55,7 +55,7 @@
 @overlay-background-color: lighten(@base-background-color, 5%);
 @overlay-border-color:     @base-border-color;
 
-@button-background-color:          lighten(@base-background-color, 10%);
+@button-background-color:          #75715E;
 @button-background-color-hover:    lighten(@button-background-color, 12%);
 @button-background-color-selected: @button-background-color-hover;
 @button-border-color:              @base-border-color;
@@ -66,7 +66,7 @@
 @tab-background-color-active: lighten(@tab-bar-background-color, 10%);
 @tab-border-color:            @base-border-color;
 
-@tree-view-background-color: @base-background-color;
+@tree-view-background-color: #1e1f1c;
 @tree-view-border-color:     @base-border-color;
 
 // Site colors
